# fzBGPTools

./: .gitignore  ANTIGRAVITY-README.md  BUILD.md  CHANGELOG.md  CHECKPOINT.md  DEPLOY.md  HANDOFF.md  LICENSE  Makefile  README.md  app.jsx  build_deb.sh  fzBGPTools-standalone.html  fzBGPTools.html  fzbgptools.spec  mudancas.md  pyproject.toml  requirements.txt  styles.css
.github/workflows/: release.yml
components/: shared.jsx  sidebar.jsx
screens/: asn-manager.jsx  dashboard.jsx  discovery.jsx  host-manager.jsx  logs.jsx  network-tools.jsx  settings.jsx
scripts/: bootstrap-github.sh  build_all.sh  bump_version.py
src/: database.py  main.py  version.py
src/engine/: asn_resolver.py  ping.py  scanner.py  ssh_client.py  telnet_client.py  traceroute.py  updater.py
src/ui/: asn_manager.py  dashboard.py  discovery.py  host_manager.py  logs_console.py  main_window.py  network_tools.py  settings.py  theme.py  widgets.py
