[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fzbgptools"
version = "0.2.0"
description = "Network Peering Mapper — BGP, hosts, diagnósticos e descoberta."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "CC-BY-4.0" }
authors = [{ name = "Eng. Roger Luft", email = "roger@webstorage.com.br" }]
maintainers = [{ name = "Webstorage Tecnologia", email = "roger@webstorage.com.br" }]
keywords = ["bgp", "network", "peering", "traceroute", "asn", "discovery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: System Administrators",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
]
dependencies = [
    "PyQt5>=5.15.0,<6",
    "paramiko>=3.0,<4",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
fzbgptools = "src.main:main"

[project.urls]
Homepage = "https://github.com/rluft/fzBGPTools"
Repository = "https://fzrepo.rogerluft.com.br"
Issues = "https://github.com/rluft/fzBGPTools/issues"
Author = "https://webstorage.com.br"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"src.resources" = ["*.png", "*.svg"]
